[metadata]
name = scloud_api
version = 0.1.0
author = Robert Evans
author_email = robertevans@robertevansmb.com
description = Python module to interface with the SellerCloud API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rmevans1/scloud_api
project_urls =
    Bug Tracker = https://github.com/rmevans1/scloud_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests
    cachetools
    python-dotenv
